--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(surge-tool src/main.cc)
 find_package(Tesseract CONFIG REQUIRED)
 target_link_libraries(surge-tool PRIVATE gdi32 libtesseract)
-file(COPY assets DESTINATION .)
+file(COPY assets DESTINATION Release)
